MeterBase: * Strip lots of JS style settings and replace with generic CSS * Get rid of unnecessary meter-scale container * Put scale module directly into element * Fix format_labels option for scale module Scale: * Hide auto sizing stuff behind an option, use fixed CSS by default * Drop micro positioning of labels, use translate: transform with -50% (or -100% for max label)
!! This commit breaks LevelMeter badly !!

--- a/css/examples.css
+++ b/css/examples.css
@@ -127,22 +127,19 @@
 
 
 #sc_meterbase {
-    margin-left: 80px;
+    width: 100%;
 }
 #sc_meterbase .toolkit-meter-base.toolkit-vertical.toolkit-right {
+    
 }
 #sc_meterbase .toolkit-meter-base.toolkit-vertical {
-    height: 200px;
-    margin-bottom: 30px;
+    height: 280px;
+    float: left;
 }
 #sc_meterbase .toolkit-meter-base.toolkit-horizontal {
     width: 500px;
-}
-#sc_meterbase .toolkit-meter-base.toolkit-vertical .toolkit-bar {
-    width: 100px;
-}
-#sc_meterbase .toolkit-meter-base.toolkit-horizontal .toolkit-bar {
-    height: 50px;
+    float: left;
+    height: 137px;
 }
 
 
